name:                pomodoro
version:             0.1.0.0
synopsis:            Simple Pomodoro method database manager
description:         Please see README.md
homepage:            http://github.com/guaraqe/pomodoro#readme
license:             GPL-3
license-file:        LICENSE
author:              guaraqe
maintainer:          guaraqe@openmailbox.org
copyright:           2010 Author Here
category:            organization
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pomodoro-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , yaml
                     , split
                     , time
                     , process
                     , ansi-terminal
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , esqueleto
                     , pomodoro
  default-language:    Haskell2010

test-suite pomodoro-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pomodoro
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/guaraqe/pomodoro
